# Lima-camera-zwo

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
conda/camera/: bld.bat  meta.yaml
conda/tango/: bld.bat  meta.yaml
doc/: index.rst  tango.rst
include/: ZwoBinCtrlObj.h  ZwoBufferCtrlObj.h  ZwoCamera.h  ZwoDetInfoCtrObj.h  ZwoDetInfoCtrlObj.h  ZwoFlipCtrlObj.h  ZwoInterface.h  ZwoRoiCtrlObj.h  ZwoSavingCtrlObj.h  ZwoShutterCtrlObj.h  ZwoSyncCtrlObj.h  ZwoVideoCtrlObj.h
python/: Zwo.py  __init__.py
sdk/demo/: Makefile  UtilTimer.c  main.cpp  main_SDK2_snap.cpp  main_SDK2_video.cpp  main_SDK2_video_mac.cpp
sdk/include/: ASICamera2.h
sdk/lib/: asi.rules
sdk/lib/armv5/: libASICamera2.so.0.7.0118  libASICamera2.so.1.13.0821
sdk/lib/armv6/: libASICamera2.so.0.7.0118  libASICamera2.so.1.13.0821
sdk/lib/armv7/: libASICamera2.so.0.7.0118  libASICamera2.so.1.13.0821
sdk/lib/armv8/: libASICamera2.so.0.7.0118  libASICamera2.so.1.13.0821
sdk/lib/mac/: libASICamera2.dylib  libASICamera2.dylib.0.7.0118  libASICamera2.dylib.1.13.0821
sdk/lib/x64/: libASICamera2.so.1.13.0821
sdk/lib/x86/: libASICamera2.so.0.7.0118  libASICamera2.so.1.13.0821
sip/: ZwoCamera.sip  ZwoInterface.sip
src/: Makefile  ZwoBinCtrlObj.cpp  ZwoBufferCtrlObj.cpp  ZwoCamera.cpp  ZwoDetInfoCtrObj.cpp  ZwoDetInfoCtrlObj.cpp  ZwoFlipCtrlObj.cpp  ZwoInterface.cpp  ZwoRoiCtrlObj.cpp  ZwoSavingCtrlObj.cpp  ZwoShutterCtrlObj.cpp  ZwoSyncCtrlObj.cpp  ZwoVideoCtrlObj.cpp
tango/: CMakeLists.txt  Zwo.py
test/: Makefile  test_camera.cpp  test_camera.py
